# uoh-ay26-ai-agent-debate

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.pytest_tmp/test_cli_run_debate_and_show_t0/logs/: debate.jsonl
.pytest_tmp/test_cli_save_last_transcript_0/logs/: debate.jsonl  transcript-20260524-175220.txt
.pytest_tmp/test_config_rejects_missing_re0/: bad.yaml
.pytest_tmp/test_config_rejects_zero_turns0/: bad.yaml
.pytest_tmp/test_logger_exports_transcript0/exports/: saved.txt
.pytest_tmp/test_logger_exports_transcript0/logs/: debate.jsonl
.pytest_tmp/test_logger_reset_clears_previ0/configs/: debate_config.yaml
.pytest_tmp/test_logger_writes_jsonl_and_t0/logs/: debate.jsonl  transcript.txt
.pytest_tmp/test_orchestrator_runs_mock_de0/logs/: debate.jsonl  transcript.txt
configs/: debate_config.yaml
docs/: PLAN.md  PRD.md  PROMPT_BOOK.md  TODO.md
results/: transcript-20260528-004720.txt  transcript-20260528-005218.txt  transcript-20260528-005609.txt
src/agent_debate/: __init__.py  cli.py  config.py  config_yaml.py  memory.py
src/agent_debate/agents/: base.py  debate_agent.py  judge_agent.py
src/agent_debate/ipc/: messages.py  queues.py
src/agent_debate/llm/: base.py  factory.py  gemini_client.py  mock_client.py  mock_content.py  (+3 more)
tests/: helpers.py  test_agents.py  test_cli.py  test_config.py  test_gemini_client.py  test_judge_agent.py  test_llm_and_tools.py  test_memory_and_logging.py  test_messages.py  test_mock_and_tools.py  test_orchestrator.py  test_routing.py  test_watchdog.py
(+5 files in other folders)
